# Jengine

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  PhysicsEngine.sln  README.md  build.sh  vcpkg.json
Jengine2D/: glad.c
Jengine2D/App/: GraphicsEngine.cpp  imgui.ini
Jengine2D/App/Source/: App.cpp
Jengine2D/App/Source/App/: App.cpp  EBO.cpp  Jengine.cpp  Main.cpp  Renderer.cpp  Shader.cpp  ShapeBuilder.cpp  TODO.md  VAO.cpp  VBO.cpp
Jengine2D/App/Source/Defaults/: default.frag  default.vert
Jengine2D/App/Source/Headers/: Circle.h  EBO.h  Jengine.h  Renderer.h  Shader.h  ShapeBuilder.h  VAO.h  VBLayout.h  VBO.h  Vertex.h
Jengine2D/Core/: Structs.h
Jengine2D/Core/Source/Core/: Core.cpp  Core.h  Core.hpp
Jengine2D/Core/Source/Headers/: Structs.h
Jengine2D/Libraries/include/glad/: glad.h
Jengine2D/Libraries/lib/: glfw3.lib
Jengine3D/App/Source/: App.cpp
Jengine3D/Core/Source/Core/: Core.cpp  Core.h
Jengine3D/Core/Source/Headers/: Structs.h
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
src/: glfw.hpp  globjects.hpp  lib.cpp  lib.hpp  main.cpp
testingc/: Objs.cpp  main.cpp  objs.h  testingc.vcxproj  testingc.vcxproj.filters  vec.h
